--- a/index.html
+++ b/index.html
@@ -27,13 +27,18 @@
             box-sizing: border-box;
             font-size: 14px;
         }
+        #farmList {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 10px;
+        }
         .farm-item {
-            margin: 5px 0;
             padding: 8px;
             background-color: #fff;
             border-radius: 4px;
             transition: background-color 0.3s ease;
             box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+            text-align: center; /* Center the text in each grid cell */
         }
         .farm-item:hover {
             background-color: #f5f5f5;
@@ -52,6 +57,7 @@
             background-color: #ffebee;
             padding: 10px;
             border-radius: 4px;
+            grid-column: 1 / -1; /* Span error across all columns */
         }
     </style>
 </head>
